Terraform/Modules/nat-gateway/main.tf
# Allocate Elastic IP. This EIP will be used for the nat-gateway in the Public Subnet AZ1 
resource "aws_eip" "eip_for_nat_gateway_az1" {
  domain    = "vpc"

  tags   = {
    Name = "Nat Gateway AZ1 EIP"
  }
}

# Allocate Elastic IP. This EIP will be used for the nat-gateway in the Public Subnet AZ2
resource "aws_eip" "eip_for_nat_gateway_az2" {
  domain    = "vpc"

  tags   = {
    Name = "Nat Gateway AZ2 EIP"
  }
}

# Create Nat Gateway in Public Subnet AZ1
resource "aws_nat_gateway" "nat_gateway_az1" {
  allocation_id = aws_eip.eip_for_nat_gateway_az1.id
  subnet_id     = var.public_subnet_az1_id

  tags   = {
    Name = "Nat Gateway AZ1"
  }

  # to ensure proper ordering, it is recommended to add an explicit dependency
  depends_on = [var.internet_gateway]
}

# create nat gateway in public subnet az2
resource "aws_nat_gateway" "nat_gateway_az2" {
  allocation_id = aws_eip.eip_for_nat_gateway_az2.id
  subnet_id     = var.public_subnet_az2_id

  tags   = {
    Name = "Nat Gateway AZ2"
  }

  # to ensure proper ordering, it is recommended to add an explicit dependency
  # on the internet gateway for the vpc.
  depends_on = [var.internet_gateway]
}

# create private route table az1 and add route through nat gateway az1
resource "aws_route_table" "private_route_table_az1" {
  vpc_id            =  var.vpc_id

  route {
    cidr_block      = "0.0.0.0/0"
    nat_gateway_id  = aws_nat_gateway.nat_gateway_az1.id
  }

  tags   = {
    Name = "Private Route Table AZ1"
  }
}

# associate private subnet az1 with private route table az1
resource "aws_route_table_association" "private_subnet_az1_route_table_az1_association" {
  subnet_id         = var.private_subnet_az1_id
  route_table_id    = aws_route_table.private_route_table_az1.id
}

# create private route table az2 and add route through nat gateway az2
resource "aws_route_table" "private_route_table_az2" {
  vpc_id            = var.vpc_id

  route {
    cidr_block      = "0.0.0.0/0"
    nat_gateway_id  = aws_nat_gateway.nat_gateway_az2.id
  }

  tags   = {
    Name = "Private Route Table AZ2"
  }
}

# associate private subnet az2 with private route table az2
resource "aws_route_table_association" "private_app_subnet_az2_route_table_az2_association" {
  subnet_id         = var.private_subnet_az2_id
  route_table_id    = aws_route_table.private_route_table_az2.id
}
